force-app/main/default/objects/CartItem/fields/AVA_B2BLEX__LandedCost__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__LandedCost__c</fullName>
    <label>Custom/Import Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>