force-app/main/default/objects/CartItem/fields/Individual_Membership_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Individual_Membership_Assignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup for Previous Individual Membership Assignment</description>
    <inlineHelpText>Lookup for Previous Individual Membership Assignment</inlineHelpText>
    <label>Individual Membership Assignment</label>
    <referenceTo>Account_Membership__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>