force-app/main/default/objects/CartItem/fields/Practice_Level_Membership_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Practice_Level_Membership_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice Level Membership Assignment</label>
    <referenceTo>Practice_Level_Membership_Assignment__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>